# MyStudyTrackingApp

./: CMakeLists.txt  README.md  main.cpp
qml/: MainMenu.qml  PomodoroView.qml  WelcomeScreen.qml  streaks.qml  test.qml  todo.qml
src/core/database/: databasemanager.cpp  databasemanager.h
src/core/pomodoro/: pomodorotimer.cpp  pomodorotimer.h
src/core/streaks/: streaks.cpp  streaks.h  streaksmanager.cpp  streaksmanager.h
src/core/todo/: todo.cpp  todo.h  todomanager.cpp  todomanager.h
tests/: test_streaks.cpp  test_streaksManager.cpp
